tests/sksl/errors/ReturnDifferentType.glsl
### Compilation failed:

error: 2: functions 'void func()' and 'int func()' differ only in return type
void func() {}
^^^^
1 error
